mutant creation not working. the rest does

--- a/BotTestFk/framework/templates/framework/utterance_answers.html
+++ b/BotTestFk/framework/templates/framework/utterance_answers.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <span id="nb_missing_answers">{{ nb_missing_answers }}</span> missing answers.
-<button onclick="call_counter()">Compute missing answers</button>
+<button onclick="compute_utt_answers()">Compute missing answers</button>
 <span id="error"></span>
 
 Accuracy:
