--- a/BotTestFk/framework/templates/framework/create_mutants.html
+++ b/BotTestFk/framework/templates/framework/create_mutants.html
@@ -10,5 +10,13 @@
     {{ form }}
     <input type="submit" value="Submit" />
 </form>
+    {% if nb_mutants != -1 %}
+        {{ nb_mutants }} new mutants created
+    {% endif %}
 
+    <br/>
+
+    <span id="nb_missing_answers">{{ nb_missing_answers }}</span> missing answers for the mutants.
+    <button onclick="compute_mut_answers()">Compute missing answers</button>
+    <span id="error"></span>
 {% endblock %}
