--- a/BotTestFk/framework/templates/framework/create_mutants.html
+++ b/BotTestFk/framework/templates/framework/create_mutants.html
@@ -1,6 +1,9 @@
 
 {% extends "framework/base.html" %}
 
+{% block title %}Create mutants - BotTestFk{% endblock %}
+
+
 {% block content %}
 
 <h1>Create mutants</h1>
