--- a/BotTestFk/framework/templates/framework/manage_utterances.html
+++ b/BotTestFk/framework/templates/framework/manage_utterances.html
@@ -1,6 +1,8 @@
 
 {% extends "framework/base.html" %}
 
+{% block title %}Manage utterances - BotTestFk{% endblock %}
+
 {% block content %}
 
 <h1>Add Utterances</h1>
