--- a/BotTestFk/framework/templates/framework/results_detailed.html
+++ b/BotTestFk/framework/templates/framework/results_detailed.html
@@ -1,5 +1,6 @@
 
 {% extends "framework/base.html" %}
+{% block title %}Results detailed - BotTestFk{% endblock %}
 
 {% block content %}
     <h1>Utterances that are not robust</h1>
