--- a/BotTestFk/framework/templates/framework/utterance_answers.html
+++ b/BotTestFk/framework/templates/framework/utterance_answers.html
@@ -1,5 +1,6 @@
 
 {% extends "framework/base.html" %}
+{% block title %}Get answers - BotTestFk{% endblock %}
 
 {% block content %}
 <span id="nb_missing_answers">{{ nb_missing_answers }}</span> missing answers.
