adding a few features

--- a/BotTestFk/framework/templates/framework/base.html
+++ b/BotTestFk/framework/templates/framework/base.html
@@ -16,6 +16,7 @@
     <li><a href="/framework/manage_utterances">Manage the utterances</a></li>
     <li><a href="/framework/utterance_answers">Get the answers for the utterances</a></li>
     <li><a href="/framework/create_mutants">Create the mutants</a></li>
+    <li><a href="/framework/mutants_answers">Get the answers for the mutants</a></li>
     <li><a href="/framework/results_stats">Get robustness stats</a></li>
     <li><a href="/framework/results_detailed">Get detailed results</a></li>
 </ul>
