--- a/BotTestFk/framework/templates/framework/create_mutants.html
+++ b/BotTestFk/framework/templates/framework/create_mutants.html
@@ -20,6 +20,6 @@
     <br/>
 
     <span id="nb_missing_answers">{{ nb_missing_answers }}</span> missing answers for the mutants.
-    <button onclick="compute_mut_answers()">Compute missing answers</button>
-    <span id="error"></span>
+{#    <button onclick="compute_mut_answers()">Compute missing answers</button>#}
+{#    <span id="error"></span>#}
 {% endblock %}
