--- a/BotTestFk/framework/templates/framework/results_stats.html
+++ b/BotTestFk/framework/templates/framework/results_stats.html
@@ -10,11 +10,13 @@
     <tr>
     <th scope="col">Intent</th>
     <th scope="col">Intent Robustness</th>
+    <th scope="col">Nb mutants with answer</th>
     </tr>
         {% for i in intents%}
             <tr>
             <td>{{ i }}</td>
             <td>{{ i.robustness }}</td>
+            <td>{{ i.nb_mut_ans }}</td>
             </tr>
         {% endfor %}
     </table>
@@ -23,11 +25,13 @@
     <tr>
     <th scope="col">Strategy</th>
     <th scope="col">Intent Robustness</th>
+    <th scope="col">Nb mutants with answer</th>
     </tr>
         {% for s in strategies%}
             <tr>
             <td>{{ s }}</td>
             <td>{{ s.intent_robustness }}</td>
+            <td>{{ s.nb_mut_ans }}</td>
             </tr>
         {% endfor %}
     </table>
